--- a/cerro-tapado/style.css
+++ b/cerro-tapado/style.css
@@ -828,3 +828,7 @@ body.view-control-buttons .viewControlButton {
 .viewControlButton-6 {
   margin-left: 105px;
 }
+#pano {
+  touch-action: none;
+  -ms-touch-action: none;
+}
